--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "test:types": "vue-tsc -b --noEmit"
   },
   "devDependencies": {
+    "@iconify-json/lucide": "^1.2.77",
+    "@iconify-json/simple-icons": "^1.2.61",
     "@nuxt/eslint": "^1.11.0",
     "@nuxt/ui": "^4.2.1",
     "@nuxthub/core": "^0.9.1",
