--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,8 +1,8 @@
 {
   "$schema": "./node_modules/wrangler/config-schema.json",
   "name": "addify",
-  "compatibility_date": "2025-12-01",
-  "main": "dist/server/index.mjs",
+  "compatibility_date": "2026-01-22",
+  "main": ".output/server/index.mjs",
   "compatibility_flags": ["nodejs_compat"],
   "routes": [
     {
@@ -12,6 +12,6 @@
   ],
   "assets": {
     "binding": "ASSETS",
-    "directory": "dist/public"
+    "directory": ".output/public"
   }
 }
